apps/talos-home/gotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
